# Robocupathome

./: README.md
Final_project/from2Dto3D/: CMakeLists.txt
Final_project/from2Dto3D/config/: objectname.yaml
Final_project/from2Dto3D/include/from2Dto3D/: from2Dto3D.h
Final_project/from2Dto3D/launch/: transform.launch
Final_project/from2Dto3D/src/: from2Dto3D.cpp
Final_project/ikTiago/: CMakeLists.txt  package.xml
Final_project/ikTiago/include/ikTiago/: joint.h
Final_project/ikTiago/include/tf_tiago/: ReachGoal.h  ReachGoalRequest.h  ReachGoalResponse.h  doorshaft.h  doorshaftRequest.h  doorshaftResponse.h  gripper.h  gripperRequest.h  gripperResponse.h
Final_project/ikTiago/launch/: tiago_arm.launch
Final_project/ikTiago/src/: ikTiago.cpp  littlemove.cpp  openwide.cpp
Final_project/ikTiago/srv/: gripper.srv
Final_project/perception_msgs/: CMakeLists.txt
Final_project/perception_msgs/msg/: RectArray.msg
Final_project/perception_msgs/msg/.svn/text-base/: SimplifiedSkinPatch.msg.svn-base  SkinCellID.msg.svn-base
Final_project/perception_msgs/srv/.svn/: entries
Final_project/perception_msgs/srv/.svn/text-base/: change_led_color.srv.svn-base  send_single_patch_conf.srv.svn-base
Final_project/perception_tutorials/object_detection/: package.xml
Final_project/perception_tutorials/object_detection/src/: ObjectRecognition_node.cpp
Final_project/perception_tutorials/plane_segmentation/: CMakeLists.txt  package.xml
Final_project/perception_tutorials/plane_segmentation/rviz/: seg.rviz
Final_project/perception_tutorials/plane_segmentation/src/: PlaneSegmentation.cpp  PlaneSegmentation_node.cpp
Final_project/robot_nav_motion/: CMakeLists.txt
Final_project/robot_nav_motion/include/from2Dto3D/: PointBaseRequest.h  PointBaseResponse.h  ReachGoalRequest.h  ReachGoalResponse.h  reachpointRequest.h
Final_project/robot_nav_motion/include/robot_nav_motion/: joint.h
Final_project/robot_nav_motion/launch/: rviz.launch  test_whole.launch
Final_project/robot_nav_motion/src/: test_arm.cpp  test_nav.cpp  tiago_class.cpp
Final_project/robot_nav_motion/srv/: ReachGoal.srv  doorinfo.srv  doorshaft.srv
Final_project/tf_tiago/: CMakeLists.txt  package.xml
Final_project/tf_tiago/include/tf_tiago/: lookupTransform.h  transform.h
Final_project/tf_tiago/src/: transform.cpp  transform_node.cpp
Tutorial1/: Readme
Tutorial1/roboCupHome_tutorial_ChengjieYuan/src/turtle_vis/: CMakeLists.txt  package.xml
Tutorial1/roboCupHome_tutorial_ChengjieYuan/src/turtle_vis/include/turtle_vis/myClass/: TurtleClass.h
Tutorial1/roboCupHome_tutorial_ChengjieYuan/src/turtle_vis/msg/: DesiredPose.msg
Tutorial1/roboCupHome_tutorial_ChengjieYuan/src/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_set_position.cpp  turtle_vis_node.cpp
Tutorial1/roboCupHome_tutorial_ChengjieYuan/src/turtle_vis/src/solutions/myClass/: TurtleClass.cpp
Tutorial2/: Readme
Tutorial2/controllers_tutorials/: CMakeLists.txt  package.xml  tutorial_controller_plugins.xml
Tutorial2/controllers_tutorials/config/: combined_resource_controller.yaml  new_torso_controller.yaml
Tutorial2/controllers_tutorials/launch/: combined_resource_controller.launch  new_torso_controller.launch
Tutorial2/controllers_tutorials/src/: combined_resource_controller.cpp  new_torso_controller.cpp
Tutorial2/ics_gazebo/: CMakeLists.txt  package.xml
Tutorial2/ics_gazebo/config/: tiago.rviz
Tutorial2/ics_gazebo/launch/: edit_world.launch  hsrb.launch  tiago.launch
Tutorial2/ics_gazebo/models/door/: door.sdf  model.config
Tutorial2/ics_gazebo/models/door/meshes/: door.stl  frame.stl  handle.stl
Tutorial2/ics_gazebo/models/tv/: tv.sdf
Tutorial2/ics_gazebo/worlds/: empty.world  tutorial.world  tutorial2.world
Tutorial2/turtle_vis/: CMakeLists.txt
Tutorial2/turtle_vis/include/turtle_vis/myClass/: TurtleClass.h
Tutorial2/turtle_vis/launch/: TurtleVis.launch
Tutorial2/turtle_vis/launch/rvizConfigs/: turtleTutorial.rviz  turtle_gains.yaml
Tutorial2/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_set_position.cpp  turtle_vis_node.cpp
Tutorial2/turtle_vis/src/solutions/myClass/: TurtleClass.cpp
Tutorial2/turtle_vis/srv/: send_desired_pose.srv
Tutorial3/: Readme.txt
Tutorial3/task_1/small_office/: map.pgm
Tutorial3/task_1/tutorial_office/: map.pgm
Tutorial3/task_2/robot_navigation/: CMakeLists.txt  navigation.launch  package.xml
Tutorial3/task_2/robot_navigation/src/: robot_navigation.cpp
Tutorial3/task_3/robot_nav_motion/: CMakeLists.txt  navigation.launch  package.xml
Tutorial3/task_3/robot_nav_motion/src/: robot_nav_motion.cpp
Tutorial4/from2Dto3D/: CMakeLists.txt
Tutorial4/from2Dto3D/include/from2Dto3D/: from2Dto3D.h
Tutorial4/from2Dto3D/launch/: from2dto3d.launch
Tutorial4/from2Dto3D/src/: from2Dto3D.cpp  from2Dto3DClass.cpp
Tutorial4/object_recognition/: CMakeLists.txt  package.xml
Tutorial4/object_recognition/launch/: object_recognition.launch  old_object_recognition.launch
Tutorial4/object_recognition/src/: object_recognition.cpp
Tutorial4/perception_msgs/: CMakeLists.txt
Tutorial4/perception_msgs/msg/.svn/: entries
Tutorial4/perception_msgs/msg/.svn/text-base/: SimplifiedSkinCell.msg.svn-base
Tutorial4/perception_msgs/srv/.svn/text-base/: send_cell_data.srv.svn-base
Tutorial4/perception_tutorials/plane_segmentation/: CMakeLists.txt  package.xml
Tutorial4/perception_tutorials/plane_segmentation/config/: pcl_segment_table.rviz
Tutorial4/perception_tutorials/plane_segmentation/include/plane_segmentation/: PlaneSegmentation.h
Tutorial4/perception_tutorials/plane_segmentation/launch/: plane_segmentation.launch
Tutorial4/perception_tutorials/plane_segmentation/src/: PlaneSegmentation.cpp  PlaneSegmentationClass.cpp
Tutorial5/tutorial_5/: Readme.txt
Tutorial5/tutorial_5/pal_room_22/: map.yaml  submap_0.pgm
